Fix for {{SITENAME}} being cut off in the header after scrolling down + minor color fix

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -485,6 +485,9 @@ input.button.clickfail:hover {
 #header a#logo_link h2.logo-text {
 	margin-top: 15px;
 }
+#header.shrunk a#logo_link h2.logo-text {
+	margin-top: 6px;
+}
 
 #cse-search-box, #header #bubble_search {
 	padding: 15px 15px 15px 0;
@@ -1070,7 +1073,7 @@ ul#tabs li a {
 	position: absolute;
 	top: 40px;
 	font-size: 1em;
-	border: 1px solid #91af79;
+	border: 1px solid #1E90FF;
 	color: #363;
 	margin: 0;
 	background-color: #f9f9f9;
